<resources>
    <string name="app_name">Cognitia</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="form_short_robotics">https://goo.gl/forms/0V7HGQ8Gw3mDDvrk2</string>
    <string name="form_long_robotics">https://docs.google.com/forms/d/e/1FAIpQLSf7u_2Wwqfh0FNQLBF9A5QM2WSNYfJ6QZ8Jmw-4zpCWq_9LFQ/viewform</string>
    <string name="form_ce">https://goo.gl/forms/Hrp9bbeJQxaUvPrK2?fbclid=IwAR1c2Y-6eAYmkEJ5cfB2-1CXx6RRnwf_JOP1cnwPgDYodPWwV_WG5IGD2Dg</string>
    <string name="form_cse"><![CDATA[https://docs.google.com/forms/d/e/1FAIpQLSe-nR8FBUfnKiB5JSQI0l31pIkNNXDnvspdtx25DdQo4oaXJw/viewform?vc=0&c=0&w=1&usp=mail_form_link&fbclid=IwAR3QyW2xd1v8tR_uX4DbcrddecBq8wnLteVmvd8UuY6D—JqtkxkkUYRmu4]]></string>
    <string name="form_eee">https://docs.google.com/forms/d/e/1FAIpQLSf-_8O1sDZYTMRKHXPtgOynx6__rdfrpk_UVBXkfoqXN_tWIg/viewform?c=0&amp;w=1&amp;fbclid=IwAR1I03hQg6xpXCG_4zFz6CaiD9WeAErDMiZAkvlSDv1AATY-6AesCPubIgo</string>
    <string name="form_ece">https://docs.google.com/forms/d/e/1FAIpQLSdgiD1yujxUa-fdtVkps1gNCVMjgtdb0WFw-SY_V3S57n0bUw/viewform?fbclid=IwAR2fTmb7Crkz3NwP53T9M3om5Js3SONUdL-PAZx9naQD_U4xYv4ApzarZwM</string>
    <string name="form_me">https://docs.google.com/forms/d/e/1FAIpQLSdrQ_6XSL1RYUS_VgP3YvpWG39xHrG9mnFg-6yBQAaJZLOEVA/viewform?usp=fb_send_fb&amp;fbclid=IwAR1EV8O3Qtu6rKywsTeVtG-fLL0lu6YwuL6QG2d9_M_Qj5WHslSRhGzPm0c</string>
    <string name="form_gaming">https://docs.google.com/forms/d/e/1FAIpQLSec8qbXlwykqU_VQur2DZLWSAw4n8iFjWZdccmaf6mmpvyYvg/viewform?usp=sf_link&amp;fbclid=IwAR0Fhyap0r1VROJ4eI4RJH1TcWNJBcrB-HiLJrTdUU9K5m3CJ0K-DDhPVE8</string>
    <string name="search_hint">Search members…</string>
    <string name="empty_view_title_text">Getting the stuff ready !</string>
    <string name="cognitia_emoji">🇨 🇴 🇬 🇳 🇮 🇹 🇮 🇦</string>
    <string name="nav_tap_target">Your gateway to the whole app</string>
    <string name="share_tap_target">Liked an event!\nThen spread the word !</string>
    <string name="explore_tap_target">Interested in an event?\nExplore everything about it</string>
    <string name="slide_1_title">TECHNICAL EVENTS</string>
    <string name="slide_1_desc">We have many great technical events like GAT, RAT, LFR, RoboRumble and many more that will surely ignite the engineer in you! Take out those Arduinos! Get building ! Compete with your friends and find out if your robot is the last one standing! </string>
    <string name="slide_2_title">DEPARTMENTAL EVENTS</string>
    <string name="slide_2_desc">The five departments of NITM - CSE, ECE, EEE, ME and CE have in store for a wide range of interesting events that are both challenging and fun.</string>
    <string name="slide_3_title">WELCOME</string>
    <string name="slide_3_desc">To NIT Meghalaya\'s Annual Tech Fest COGNITIA 2018</string>
    <string name="slide_4_title">ALL SET!</string>
    <string name="slide_4_desc">Brace yourself to get a feel of Meghalaya\'s largest tech fest</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="cognitia_18">Cognitia \'18</string>
    <string name="events">Events</string>
    <string name="robotics">Robotics</string>
    <string name="departmental">Departmental</string>
    <string name="others">Others</string>
    <string name="action_share">Share</string>
    <string name="action_explore">Explore</string>
    <string name="card_title">Card title</string>
    <string name="card_content">Loren ipsum Loren ipsum Loren ipsum Loren ipsum Loren ipsum Loren ipsum Loren ipsum </string>
    <string name="website">Website</string>
    <string name="link_website">http://cognitia.nitmeghalaya.in/</string>
    <string name="facebook">Facebook</string>
    <string name="link_facebook">https://www.facebook.com/NITMcognitia/</string>
    <string name="instagram">Instagram</string>
    <string name="link_instagram">https://www.instagram.com/cognitia_2016/</string>
    <string name="youtube">YouTube</string>
    <string name="link_youtube">https://www.youtube.com/playlist?list=PLBNpblWmiOZqXx2Vsn_qJW6v1FZqxVD9N</string>
    <string name="github">Repo</string>
    <string name="link_github">https://github.com/Devansh-Maurya/Cognitia-2018-App</string>
    <string name="twitter">Twitter</string>
    <string name="nav_connect">Connect with us</string>
    <string name="nav_team">Our team</string>
    <string name="nav_feedback">Feedback</string>
    <string name="sponsors">Sponsors</string>
    <string name="sponsorship_email">b16ee012@nitm.ac.in</string>
    <string name="sponsorship_phone">+919485145900</string>
    <string name="sponsor_us">Sponsor Us</string>
    <string name="empty_string"> </string>
    <string name="image_tag">Image tag</string>
    <string name="event_image_trans">Event image transition</string>
    <string name="event_name_trans">Event name transition</string>
    <string name="event_others">Other events</string>
    <string name="post_head">Head</string>
    <string name="post_coordinator">Coordinator</string>
    <string name="post_co_coordinator">Co-coordinator</string>
    <string name="general_secretary">General Secretary Science and Technology</string>
    <string name="general_secretary_member">Member of General Secretary Science and Technology</string>
    <string name="secretary_and_members">Secretary and Members</string>
    <string name="team_event_management">Event Management</string>
    <string name="team_departmental">Departmental Events</string>
    <string name="team_cse_departmental">CSE Departmental Events</string>
    <string name="team_civil_departmental">Civil Departmental Events</string>
    <string name="team_ece_departmental">ECE Departmental Events</string>
    <string name="team_ee_departmental">EE Departmental Events</string>
    <string name="team_me_departmental">ME Departmental Events</string>
    <string name="team_technical">Technical Events</string>
    <string name="team_race_against_time">Race Against Time</string>
    <string name="team_goal_against_time">Goal Against Time</string>
    <string name="team_robodiction">Robodiction</string>
    <string name="team_prison_breakout">Prison Breakout</string>
    <string name="team_line_follower_robot">Line Follower Robot</string>
    <string name="team_robo_rumble">Robo Rumble</string>
    <string name="team_robo_bridge">Robobridge</string>
    <string name="team_e_cell">E-Cell</string>
    <string name="team_arppegio_and_shimmer">Arppegio and Shimmer</string>
    <string name="team_publicity">Publicity</string>
    <string name="team_designing">Designing</string>
    <string name="team_web_development">Web Development</string>
    <string name="team_app_development">App Development</string>
    <string name="team_hospitality">Hospitality</string>
    <string name="team_gaming">Gaming</string>
    <string name="team_photo_walk">Photo Walk</string>
    <string name="team_disciplinary">Disciplinary</string>
    <string name="team_stage_management_and_printing">Stage Management and Printing</string>
    <string name="team_general_quiz_debate">General Quiz and Debate</string>
    <string name="team_fun_events">Fun Events</string>
    <string name="team_sponsorship">Sponsorship</string>
    <string name="asutosh_b">Asutosh Behera</string>
    <string name="email_asutosh_b">beheraashutosh132@gmail.com</string>
    <string name="nitesh_kumar">Nitesh Kumar</string>
    <string name="email_nitesh_kumar">niteshabc.sahani@gmail.com</string>
    <string name="karan">S S Sri Karan</string>
    <string name="email_karan">sskaran27@gmail.com</string>
    <string name="gnaneshwar">Gnaneshwar Chiluveru</string>
    <string name="email_gnaneshwar">b16ec024@nitm.ac.in</string>
    <string name="kethiri">Kethiri Narshimha Reddy</string>
    <string name="email_kethri">k3simha@gmail.com</string>
    <string name="shubham_kumar_singh">Shubham Kumar Singh</string>
    <string name="email_shubham_kumar_singh">shubhamsinghpd1997@gmail.com</string>
    <string name="rafad">Mohommed Yousuf Zuhar Mohommed Rafad</string>
    <string name="email_rafad">rafad_zuhar@gmail.com</string>
    <string name="saurabh_singh">Saurabh Singh</string>
    <string name="email_saurabh_singh">saurabhsinghooo79@gmail.com</string>
    <string name="koustubh_kishore">Koustubh Kishore</string>
    <string name="email_koustubh_kishore">kotzee.kishor@gmail.com</string>
    <string name="shivam_prasad">Shivam Prasad</string>
    <string name="email_shivam_prasad">prasadshivam2296@gmail.com</string>
    <string name="ketan">Ketan Anand</string>
    <string name="email_ketan">ketananand897@gmail.com</string>
    <string name="ashutosh">Ashutosh Kumar</string>
    <string name="email_ashutosh">ashutosh2700c@gmail.com</string>
    <string name="alphin">Alphin Roy</string>
    <string name="email_alphin">alphinroy88@gmail.com</string>
    <string name="allu">Allu V Babu</string>
    <string name="email_allu">alluvbabu@gmail.com</string>
    <string name="chandan">Chandan</string>
    <string name="email_chandan">battlefield00765@gmail.com</string>
    <string name="shivam_kumar">Shivam Kumar</string>
    <string name="email_shivam_kumar">shivamsam200@gmail.com</string>
    <string name="sunil">Sunil Pandit</string>
    <string name="email_sunil">sunilkumarprajapati51@gmail.com</string>
    <string name="lalit">Lalit Kumar Verma</string>
    <string name="email_lalit">lalitverma231996@gmail.com</string>
    <string name="jakish">Jakish Sheikh</string>
    <string name="email_jakish">jakishsheikh@gmail.com</string>
    <string name="shashank">Shashank Chaudhary</string>
    <string name="email_shashank">shashankchaudhary0106@gmail.com</string>
    <string name="sudarsan">Sudarsan Kilania</string>
    <string name="email_sudarsan">sudarsankilania2@gmail.com</string>
    <string name="sweeta">Sweeta Devi</string>
    <string name="email_sweeta">cliffgilbert7890@gmail.com</string>
    <string name="parakhee">Parakhee Chaudhary</string>
    <string name="email_parakhee">pimichaudhary@gmail.com</string>
    <string name="rohit_kumar">Rohit Kumar</string>
    <string name="email_rohit_kumar">imrk1600@gmail.com</string>
    <string name="rajoo">Rajoo Kumar Gautam</string>
    <string name="email_rajoo">rajoogautam10@gmail.com</string>
    <string name="rohit_raj">Rohit Raj</string>
    <string name="email_rohit_raj">rohitraja1510@gmail.com</string>
    <string name="sourav_paul">Sourav Paul</string>
    <string name="email_sourav_paul">souravpaul1998@gmail.com</string>
    <string name="wanchi">Wanchi Dora M Sangma</string>
    <string name="email_wanchi">wanchi20061997@gmail.com</string>
    <string name="nitin">Nitin Chauhan</string>
    <string name="email_nitin">nitinnitm2015@gmail.com</string>
    <string name="pankaj">Pankaj Kumar</string>
    <string name="email_pankaj">pankunitee01@gmail.com</string>
    <string name="manish_kumar">Manish Kumar</string>
    <string name="email_manish_kumar">jnvmanishkumar@gmail.com</string>
    <string name="teiboklang">Teiboklang Nongrum</string>
    <string name="email_teiboklang">teiboklangnongrum@gmail.com</string>
    <string name="naman">Naman Satyavana</string>
    <string name="email_naman">nsatyavana786@gmail.com</string>
    <string name="nirosha">Nirosha Darshani Weerarathna</string>
    <string name="email_nirosha">nirsha907@gmail.com</string>
    <string name="rishabh">Rishabh Jaiswal</string>
    <string name="email_rishabh">jaiswalr741@gmail.com</string>
    <string name="teiborlin">Teiborlin Marngar</string>
    <string name="email_teiborlin">teibor.marngar@gmail.com</string>
    <string name="kishan_das">Kishan Das</string>
    <string name="email_kishan_das">kishan.das.0298@gmail.com</string>
    <string name="baiateilang">Baiateilang Marwein</string>
</resources>