<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_events"
            android:title="@string/events">
            <menu>
                <group android:checkableBehavior="single" >
                    <item
                        android:id="@+id/events_technical"
                        android:title="@string/team_technical"/>
                    <item
                        android:id="@+id/events_ce_departmental"
                        android:title="@string/team_civil_departmental" />
                    <item
                        android:id="@+id/events_cse_departmental"
                        android:title="@string/team_cse_departmental" />
                    <item
                        android:id="@+id/events_eee_departmental"
                        android:title="@string/team_ee_departmental" />
                    <item
                        android:id="@+id/events_ece_departmental"
                        android:title="@string/team_ece_departmental" />
                    <item
                        android:id="@+id/events_me_departmental"
                        android:title="@string/team_me_departmental" />
                    <item
                        android:id="@+id/events_others"
                        android:title="@string/event_others" />
                </group>
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_team"
            android:title="@string/nav_team" />
    </group>

    <item android:title="@string/nav_connect" >
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/nav_feedback" />
        </menu>
    </item>
</menu>