<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/events_group" >
        <item
            android:title="@string/events"
            android:id="@+id/nav_events"
            android:icon="@drawable/events"/>
    </group>

    <group android:id="@+id/team_group" >
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/team"
            android:title="@string/nav_team" />
    </group>

    <group>
        <item
            android:id="@+id/nav_sponsorship"
            android:title="@string/sponsor_us">
            <menu>
                <group android:checkableBehavior="none" >
                    <item
                        android:id="@+id/sponsors"
                        android:title="@string/sponsors"
                        android:checked="true"
                        android:icon="@drawable/sponsors"/>
                    <item
                        android:id="@+id/sponsorship_email"
                        android:title="@string/sponsorship_email"
                        android:icon="@drawable/email"/>
                    <item
                        android:id="@+id/sponsorship_phone"
                        android:title="@string/sponsorship_phone"
                        android:icon="@drawable/mobile"/>
                </group>
            </menu>
        </item>
    </group>

    <item android:title="@string/nav_connect" >
        <menu>
            <item
                android:id="@+id/link_website"
                android:title="@string/website"
                android:icon="@drawable/website"/>
            <item
                android:id="@+id/link_facebook"
                android:title="@string/facebook"
                android:icon="@drawable/facebook" />
            <item
                android:id="@+id/link_instagram"
                android:title="@string/instagram"
                android:icon="@drawable/instagram" />
            <item
                android:id="@+id/link_twitter"
                android:title="@string/twitter"
                android:icon="@drawable/twitter"
                android:visible="false"/>
            <item
                android:id="@+id/link_youtube"
                android:title="@string/youtube"
                android:icon="@drawable/youtube" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/feedback"
                android:title="@string/nav_feedback" />
        </menu>
    </item>
</menu>